--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@ layout: default
 
 {% include projects.html %}
 
+{% include oss-contributions.html %}
+
+{% include publications.html %}
+
 {% include skills.html %}
 
